Add and remove members, and telemeow

--- a/about/index.html
+++ b/about/index.html
@@ -117,7 +117,7 @@
                     </div>
                 </div>
             </div>
-            <div class="about-sec" style="--border: #639bff;">
+            <!-- <div class="about-sec" style="--border: #639bff;">
                 <img src="https://github.com/CST1229.png" alt="cst's profile picture">
                 <div class="about-inner">
                     <div class="title">
@@ -128,8 +128,8 @@
                     </div>
                     <p>"I originally created the app.meower.org client. uh"</p>
                 </div>
-            </div>
-            <div class="about-sec" style="--border: #0f0;">
+            </div> -->
+            <!-- <div class="about-sec" style="--border: #0f0;">
                 <img src="https://github.com/Voxalice.png" alt="Voxalice's profile picture">
                 <div class="about-inner">
                     <div class="title">
@@ -141,42 +141,59 @@
                     </div>
                     <p>Musician for Meower since 2020!</p>
                 </div>
-            </div>
-            <div class="about-sec" style="--border: #a8b4fc;">
-                <img src="https://github.com/qbjl.png" alt="silvxrcat's profile picture">
-                <div class="about-inner">
-                    <div class="title">
-                        <span class="span-header">silvxrcat</span>
-                        <div class="roles">
-                            <span class="badge">Frontend</span>
-                            <span class="badge">Mod</span>
-                        </div>
-                    </div>
-                    <p>Original Meower Founder. "boing".</p>
-                </div>
-            </div>
+            </div> -->
             <span class="span-subheader">Team Members</span>
             <div class="moderators">
+                <div class="item" style="--border: #de87bc;">
+                    <img src="../images/members/stripes.webp" alt="wlodekm">
+                    <span class="span-subheader">stripes</span>
+                    <div class="roles">
+                        <span class="badge">Mod</span>
+                    </div>
+                </div>
+                <div class="item" style="--border: #ff7b00;">
+                    <img src="../images/members/mybearworld.webp" alt="wlodekm">
+                    <span class="span-subheader">mybearworld</span>
+                    <div class="roles">
+                        <span class="badge">Mod</span>
+                    </div>
+                </div>
+                <div class="item" style="--border: #7e46c3;">
+                    <img src="../images/members/noodles.webp" alt="wlodekm">
+                    <span class="span-subheader">noodles</span>
+                    <div class="roles">
+                        <span class="badge">Mod</span>
+                    </div>
+                </div>
+                <div class="item" style="--border: #f00;">
+                    <img src="../images/members/engineerrunz.webp" alt="wlodekm">
+                    <span class="span-subheader">EngineerRunz</span>
+                    <div class="roles">
+                        <span class="badge">Mod</span>
+                    </div>
+                </div>
                 <div class="item" style="--border: #00aaff;">
                     <img src="https://github.com/bloctans.png" alt="Bloctans">
                     <span class="span-subheader">Bloctans</span>
                     <div class="roles">
                         <span class="badge">Frontend</span>
                     </div>
-                </div><div class="item" style="--border: #3c6bfa;">
+                </div>
+                <div class="item" style="--border: #3c6bfa;">
                     <img src="https://github.com/derpygamer2142.png" alt="derpygamer2142's profile picture">
                     <span class="span-subheader">derpygamer2142</span>
                     <div class="roles">
                         <span class="badge">Mod</span>
                         <span class="badge">Frontend</span>
                     </div>
-                </div><div class="item" style="--border: #1abb9b;">
+                </div>
+                <!-- <div class="item" style="--border: #1abb9b;">
                     <img src="https://github.com/meguy7878.png" alt="Eskay's profile picture">
                     <span class="span-subheader">Eskay</span>
                     <div class="roles">
                         <span class="badge">Mod</span>
                     </div>
-                </div>
+                </div> -->
                 <div class="item" style="--border: #009542;">
                     <img src="../images/members/joshatticus.png" alt="JoshAtticus">
                     <span class="span-subheader">JoshAtticus</span>
@@ -185,21 +202,21 @@
                         <span class="badge">Frontend</span>
                     </div>
                 </div>
-                <div class="item" style="--border: #6675ff;">
+                <!-- <div class="item" style="--border: #6675ff;">
                     <img src="https://github.com/RealLordPenguin.png" alt="LordPenguin's profile picture">
                     <span class="span-subheader">LordPenguin</span>
                     <div class="roles">
                         <span class="badge">Mod</span>
                     </div>
-                </div>
-                <div class="item" style="--border: #ffaa00;">
+                </div> -->
+                <!-- <div class="item" style="--border: #ffaa00;">
                     <img src="https://github.com/PlatesOfSandwiches.png" alt="PlatesOfSandwiches' profile picture">
                     <span class="span-subheader">PlatesOfSandwiches</span>
                     <div class="roles">
                         <span class="badge">Mod</span>
                     </div>
-                </div>
-                <div class="item" style="--border: #8e103e;">
+                </div> -->
+                <!-- <div class="item" style="--border: #8e103e;">
                     <img src="https://github.com/showierdata9978.png" alt="ShowierData9978's profile picture">
                     <span class="span-subheader">ShowierData9978</span>
                     <div class="roles">
@@ -207,14 +224,14 @@
                         <span class="badge">Frontend</span>
                         <span class="badge">Backend</span>
                     </div>
-                </div>
-                <div class="item" style="--border: #62564e;">
+                </div> -->
+                <!-- <div class="item" style="--border: #62564e;">
                     <img src="https://github.com/theotherhades.png" alt="theotherhades' profile picture">
                     <span class="span-subheader">theotherhades</span>
                     <div class="roles">
                         <span class="badge">Mod</span>
                     </div>
-                </div>
+                </div> -->
                 <div class="item" style="--border: #ffa3fb;">
                     <img src="https://github.com/Touchcreator.png" alt="Touchcreator's profile picture">
                     <span class="span-subheader">Touchcreator</span>
@@ -237,6 +254,33 @@
                     <div class="roles">
                         <span class="badge">Frontend</span>
                     </div>
+                </div>
+            </div>
+            <span class="span-subheader">In Memoriam</span>
+            <div class="about-sec" style="--border: #a8b4fc;">
+                <img src="https://github.com/qbjl.png" alt="silvxrcat's profile picture">
+                <div class="about-inner">
+                    <div class="title">
+                        <span class="span-header">silvxrcat</span>
+                        <div class="roles">
+                            <span class="badge">Frontend</span>
+                            <span class="badge">Mod</span>
+                        </div>
+                    </div>
+                    <p>Original Meower Founder. "boing".</p>
+                </div>
+            </div>
+            <div class="about-sec" style="--border: #48b3ec;">
+                <img src="https://github.com/MikeDev101.png" alt="mikedev's profile picture">
+                <div class="about-inner">
+                    <div class="title">
+                        <span class="span-header">MikeDev</span>
+                        <div class="roles">
+                            <span class="badge">Frontend</span>
+                            <span class="badge">Mod</span>
+                        </div>
+                    </div>
+                    <p>The Ducklord. Chief Executive Officer and Backend Sysadmin.</p>
                 </div>
             </div>
         </div>
