--- a/index.html
+++ b/index.html
@@ -68,6 +68,19 @@
                         </a>
                     </div>
                 </div>
+                <div class="banner" style="--image: url(https://raw.githubusercontent.com/3r1s-s/telemeow/main/src/assets/images/telemeow-bannerea.png)">
+                    <div class="banner-image"></div>
+                    <div class="banner-text">
+                        <span class="banner-text-header">TeleMeow</span>
+                        <span class="banner-text-subheader">A new PWA client for iOS!</span>
+                    </div>
+                    <div class="banner-launch">
+                        <a class="banner-jump" href="https://eris.pages.dev/telemeow/" target="_blank">
+                            <span>Launch</span>
+                            <img src="images/icons/rocket.svg" width="20px" alt="icon">
+                        </a>
+                    </div>
+                </div>
             </div>
             <div class="hero-header home">
                 <div class="header-logo">
@@ -130,6 +143,18 @@
                         <span class="badge">Web</span>
                     </div>
                     <a class="client-jump" href="https://app.meower.org/" target="_blank">
+                        <span>Launch</span>
+                        <img src="images/icons/rocket.svg" width="20px" alt="icon">
+                    </a>
+                </div>
+                <div class="client-sec" style="--border: #6955AD;">
+                    <span class="span-header">TeleMeow</span>
+                    <span class="span-subheader">A new PWA client for iOS!</span>
+                    <div class="supports">
+                        <span class="badge">Web</span>
+                        <span class="badge">PWA</span>
+                    </div>
+                    <a class="client-jump" href="https://eris.pages.dev/telemeow/" target="_blank">
                         <span>Launch</span>
                         <img src="images/icons/rocket.svg" width="20px" alt="icon">
                     </a>
