make meower dead

--- a/index.html
+++ b/index.html
@@ -15,10 +15,10 @@
     <meta name="apple-mobile-web-app-title" content="Meower">
     <meta property="og:title" content="Meower">
     <meta name="description" content="
-    Meower is an innovative non-profit and open-source social media platform that prioritizes user privacy by never selling your data, never collecting more than we need to, and never displaying ads.
+    Meower was an innovative non-profit and open-source social media platform that prioritizes user privacy by never selling your data, never collecting more than we need to, and never displaying ads. Meower was shut down on December 1st, 2024, after 4 years, 4 months, 5 days of operation.
     ">
     <meta property="og:description" content="
-    Meower is an innovative non-profit and open-source social media platform that prioritizes user privacy by never selling your data, never collecting more than we need to, and never displaying ads.
+    Meower was an innovative non-profit and open-source social media platform that prioritizes user privacy by never selling your data, never collecting more than we need to, and never displaying ads. Meower was shut down on December 1st, 2024, after 4 years, 4 months, 5 days of operation.
     ">
     <meta name="keywords" content="miau, Meower, meo, Roarer, Meower Svelte, Meower clients, PWA, web clients, social media, Discord, instant message, chatroom">
     <meta name="author" content="Meower Media">
@@ -59,7 +59,7 @@
                     <div class="banner-image"></div>
                     <div class="banner-text">
                         <span class="banner-text-header">Meower Svelte</span>
-                        <span class="banner-text-subheader">The main Meower client, written in Svelte.</span>
+                        <span class="banner-text-subheader">Meower Media's Meower client (and the first proper Meower client), written in Svelte.</span>
                     </div>
                     <div class="banner-launch">
                         <a class="banner-jump" href="https://app.meower.org/" target="_blank">
@@ -72,7 +72,7 @@
                     <div class="banner-image"></div>
                     <div class="banner-text">
                         <span class="banner-text-header">TeleMeow</span>
-                        <span class="banner-text-subheader">A new PWA client for iOS!</span>
+                        <span class="banner-text-subheader">A PWA client for iOS!</span>
                     </div>
                     <div class="banner-launch">
                         <a class="banner-jump" href="https://eris.pages.dev/telemeow/" target="_blank">
@@ -100,17 +100,13 @@
         <div class="main">
             <div class="welcome">
                 <span class="span-header">
-                    Welcome!
+                    Meower has been shut down.
                 </span>
                 <span class="welcome-sub">
-                    Meower is an innovative non-profit and open-source social media platform that prioritizes user privacy by never selling your data, never collecting more than we need to, and never displaying ads.
-                </span>
-                <span class="welcome-sub">
-                    With lots of clients to choose from, you can join our community today and start connecting with like-minded individuals.
-                </span>
+                    Meower has been shut down on December 1st, 2024, after 4 years, 4 months, 5 days of it's existence. Thank you for using Meower!
             </div>
-            <span class="span-header">Dead Clients</span>
-            <span class="span-p">Clients that are no longer maintained (likely non-functional)</span>
+            <span class="span-header">Clients</span>
+            <span class="span-p">These were Meower's clients, developed either officially by Meower Media or by Meower's userbase.</span>
             <div class="clients">
                 <div class="client-sec" style="--border: #765dee;">
                     <span class="span-header">meo</span>
@@ -160,7 +156,7 @@
                     </a>
                 </div>
                 <div class="client-sec" style="--border: #5a576e;">
-                    <span class="span-header">Meower Bare Bones</span>
+                    <span class="span-header">Meower Barebones (MBB)</span>
                     <span class="span-subheader">A barebones meower client</span>
                     <div class="supports">
                         <span class="badge">Web</span>
@@ -195,7 +191,7 @@
                 </div>
                 <div class="client-sec" style="--border: #42bbb0;">
                     <span class="span-header">FurrChat</span>
-                    <span class="span-subheader">A client that captures the look and feel of the design style of the mid-2000s to early 2010s</span>
+                    <span class="span-subheader">A client that captures the look and feel of the design style of the mid-2000s to early 2010s (This client's GitHub Pages link has been taken down by it's creator)</span>
                     <div class="supports">
                         <span class="badge">Web</span>
                     </div>
