--- a/index.html
+++ b/index.html
@@ -15,10 +15,10 @@
     <meta name="apple-mobile-web-app-title" content="Meower">
     <meta property="og:title" content="Meower">
     <meta name="description" content="
-    Meower was an innovative non-profit and open-source social media platform that prioritizes user privacy by never selling your data, never collecting more than we need to, and never displaying ads. Meower was shut down on December 1st, 2024, after 4 years, 4 months, 5 days of operation.
+    Meower was an innovative non-profit and open-source social media platform that prioritized user privacy by never selling your data, never collecting more than we needed to, and never displaying ads. Meower was shut down on December 1st, 2024, after 4 years, 4 months, 5 days of operation.
     ">
     <meta property="og:description" content="
-    Meower was an innovative non-profit and open-source social media platform that prioritizes user privacy by never selling your data, never collecting more than we need to, and never displaying ads. Meower was shut down on December 1st, 2024, after 4 years, 4 months, 5 days of operation.
+    Meower was an innovative non-profit and open-source social media platform that prioritized user privacy by never selling your data, never collecting more than we needed to, and never displaying ads. Meower was shut down on December 1st, 2024, after 4 years, 4 months, 5 days of operation.
     ">
     <meta name="keywords" content="miau, Meower, meo, Roarer, Meower Svelte, Meower clients, PWA, web clients, social media, Discord, instant message, chatroom">
     <meta name="author" content="Meower Media">
@@ -100,13 +100,13 @@
         <div class="main">
             <div class="welcome">
                 <span class="span-header">
-                    Meower has been shut down.
+                    Meower has been shut down!
                 </span>
                 <span class="welcome-sub">
                     Meower has been shut down on December 1st, 2024, after 4 years, 4 months, 5 days of it's existence. Thank you for using Meower!
             </div>
             <span class="span-header">Clients</span>
-            <span class="span-p">These were Meower's clients, developed either officially by Meower Media or by Meower's userbase.</span>
+            <span class="span-p">These were Meower's clients, developed either officially by Meower Media or by Meower's userbase. Keep in mind these clients are only here for archival purposes and are currently non-functional and will not connect you to Meower in their current state.</span>
             <div class="clients">
                 <div class="client-sec" style="--border: #765dee;">
                     <span class="span-header">meo</span>
